Add a landing page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,8 @@ en:
   description: 'Description'
   create_profile: 'Create the profile'
   save_profile: 'Save the profile'
+  logout: 'Logout'
+  sign_in_refugee: 'Sign in as a refugee'
+  sign_in_mediator: 'Sign in as a mediator'
+
 
