A refugee can create and update a profile
  * a mediator can see the profiles of the refugees he is following

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,9 +27,11 @@ en:
   nationality: 'Nationality'
   description: 'Description'
   create_profile: 'Create the profile'
+  edit_profile: 'Edit my profile'
   save_profile: 'Save the profile'
   logout: 'Logout'
   sign_in_refugee: 'Sign in as a refugee'
   sign_in_mediator: 'Sign in as a mediator'
+  welcome: 'Welcome home'
 
 
