--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,7 @@ en:
   sign_in_mediator: 'Sign in as a mediator'
   welcome: 'Welcome home'
   profile_not_valid: 'Profile not complete'
-  profile_valid: 'Validated'
+  profile_valid: 'Valid profile'
   back: 'Back'
   confirm_profile: 'Validate this profile'
   unconfirm_profile: 'Invalidate this profile'
