--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,15 +28,17 @@ en:
   description: 'Description'
   create_profile: 'Create the profile'
   edit_profile: 'Edit my profile'
-  save_profile: 'Save the profile'
+  save_profile: 'Save my profile'
   logout: 'Logout'
   sign_in_refugee: 'Sign in as a refugee'
   sign_in_mediator: 'Sign in as a mediator'
+  sign_in_host: 'Sign in as a host'
   welcome: 'Welcome home'
   profile_not_valid: 'Profile not complete'
   profile_valid: 'Valid profile'
   back: 'Back'
   confirm_profile: 'Validate this profile'
   unconfirm_profile: 'Invalidate this profile'
+  dashboard: 'Dashboard'
 
 
