A refugee can associate his account with a mediator

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,11 +30,11 @@ en:
   edit_profile: 'Edit my profile'
   save_profile: 'Save my profile'
   logout: 'Logout'
-  sign_in_refugee: 'Sign in as a refugee'
-  sign_in_mediator: 'Sign in as a mediator'
-  sign_in_host: 'Sign in as a host'
+  sign_in_refugee: 'I am a refugee'
+  sign_in_mediator: 'I am a mediator'
+  sign_in_host: 'I am a host'
   welcome: 'Welcome home'
-  profile_not_valid: 'Profile waiting for validation'
+  profile_not_valid: 'Waiting for validation'
   profile_valid: 'Valid profile'
   back: 'Back'
   confirm_profile: 'Validate this profile'
@@ -48,4 +48,7 @@ en:
   mediator_contact: 'My mediator contact'
   home_list: 'Available homes'
   year_old: 'years old'
+  add_mediator: 'Add mediator'
+  mediator_email: 'Email of my mediator'
+  mediator_not_found: 'This mediator can not be found'
 
