--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,7 +13,7 @@ en:
   sign_in_mediator: 'I am a mediator'
   sign_in_host: 'I am a host'
   welcome: 'Welcome home'
-  profile_not_valid: 'Waiting for validation'
+  profile_not_valid: 'Profile waiting for validation'
   profile_valid: 'Valid profile'
   confirm_profile: 'Validate this profile'
   unconfirm_profile: 'Invalidate this profile'
